2005-07-26 22:56 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GNUmakefile: Added new GormWindowEditor.h file.
	* GormCore/GormWindowEditor.m: Reorganized methods, extracted .h
	* GormCore/GormWindowEditor.h: New file.
	* GormCore/NSCell+GormAdditions.h
	* GormCore/NSColorWell+GormExtensions.h
	* GormCore/NSColorWell+GormExtensions.m
	* GormCore/NSFontManager+GormExtensions.h
	* GormCore/NSFontManager+GormExtensions.m
	* GormCore/NSView+GormExtensions.h: Added documentation.

2005-07-26 21:02 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/2Controls/GormNSTextFieldInspector.gorm: Correct
	resize attributes.

2005-07-25 23:26 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormClassEditor.m: [GormClassEditor selectClass:editClass:]
	add exception handling.
	* GormCore/GormDocument.m: [GormDocument pasteObjects:type
	fromPasteboard:] added check for specific pb types.

2005-07-24 16:43 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormPrivate.h: Removed GormOutlineView.h from the
	includes.

2005-07-24 16:31 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormClassEditor.m: Call selectRow: method.
	* GormCore/GormOutlineView.[hm]: Added new selectRow: method.
	Corrects bug#13754.

2005-07-24 12:29 Gregory John Casamento <greg_casamento@yahoo.com>

	* Gorm.m: Eliminated [Gorm finishLaunching] and moved default
	initialization code to init before paletteManager is called so
	that the palette window is placed correctly.
	* Palettes/1Windows/GormNSPanel.m
	* Palettes/1Windows/GormNSWindow.m: Added override for 
	saveFrameUsingName: to prevent saving the position of windows
	during testing in Gorm's defaults.
	* Resources/Defaults.plist: Added defaults for Inspector, Palettes,
	and Preferences windows so that they appear at a reasonable position
	on the screen when Gorm is first used.  Corrects bug#13780.

2005-07-24 11:20 Gregory John Casamento <greg_casamento@yahoo.com>
